wip: stuck at the relocation impl access violation

--- a/anymapper/anymapper.vcxproj
+++ b/anymapper/anymapper.vcxproj
@@ -143,11 +143,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="pe.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\anycall\libanycall\libanycall.h" />
     <ClInclude Include="anymapper.hpp" />
+    <ClInclude Include="filebuf.hpp" />
+    <ClInclude Include="kernel.hpp" />
     <ClInclude Include="nt.hpp" />
+    <ClInclude Include="pe.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
