--- a/anymapper/anymapper.vcxproj.filters
+++ b/anymapper/anymapper.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="filebuf.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="helper.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
